[issue/190215_FreeFileName] apply this function in stcI (stc Iterator)
## Example file
- test/DIAG/IXXXManagerService.h.stcI
    - make in test/DIAG
    - result : OUTPUT/stc/TTT/...

--- a/test/DIAG/makefile
+++ b/test/DIAG/makefile
@@ -5,8 +5,8 @@ all:
 	perl ../../1_excel.pl --input=diag.xlsx
 	perl ../../2_replace.pl default.GV DiagInputManager.cpp.stc
 	perl ../../2_replace.pl default.GV DiagInputManager.h.stc
-	perl ../../2_replace.pl default.GV IXXXManagerService.h.stcI
-	perl ../../2_replace.pl default.GV IXXXManagerService.cpp.stcI
+	perl ../../2_replace.pl default.GV IXXXManagerService.h.stcI   	# output is in OUTPUT/stc/TTT/I.....h
+	perl ../../2_replace.pl default.GV IXXXManagerService.cpp.stcI		
 	perl ../../2_replace.pl default.GV XXXManagerService.h.stcI
 	perl ../../2_replace.pl default.GV XXXManagerService.cpp.stcI
 
